# tesseract-demo

./: .gitignore  Dockerfile  README.md  environment.yml  extractROIsFromVideo.py  main.py  pyproject.toml  run_OCR.py  run_ocr.sh  watch_video.py
kill-count-frames/: balls.txt  imgs.txt
