[tool.poetry]
name = "tesseract-demo"
version = "0.1.0"
description = ""
authors = ["Ariel Weingarten <@eh_dubb>"]

[tool.poetry.dependencies]
python = "^3.9"
av = "^8.0.3"
pillow = "8.2.0"
tesseract = "^0.1.3"
fastai = "^2.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
